--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@magic/cli": "0.0.21",
     "@magic/error": "0.0.3",
     "@magic/fs": "0.0.3",
+    "@magic/log": "0.1.3",
     "@magic/semver": "0.0.5",
     "@magic/types": "0.1.10"
   },
